fixtures/invalid/closing-heading-marker.lmk
# Heading #

@summary
Closing heading markers are invalid.
